manifests/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4-32bit
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  selector:
    matchLabels:
      app: todoapp
  replicas: 1
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image: luanoliveira1992/nodetodo:v1
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  ports:
  - port: 3000
    targetPort: 8080
  selector:
    app: todoapp
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: todo-app.info
      http:
        paths:
        - path: /
          backend:
            serviceName: todoapp
            servicePort: 8080
